docs: comprehensive README covering full client + server stack
Covers all 7 models (4 ONNX client, 3 server), codec, external APIs,
architecture diagram, WebSocket session flow, threading model, tool
system, audio pipeline, and full stack startup/shutdown procedures.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>